# ai-fastapi-crypto-wallet-tracker

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: build-deploy.yml  test-duno.yml
fastAPI/: RestAPI.py  duno.py
mcp_server/: client.py
test/: testDuno.py  testRestAPI.py
